--- a/2.5TributePage/index.html
+++ b/2.5TributePage/index.html
@@ -1,77 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Technoblade Tribute</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <main id="main">
-      <h1 id="title">Technoblade Tribute</h1>
 
-      <figure id="img-div">
-        <img
-          id="image"
-          src="https://ih1.redbubble.net/image.1979729589.8856/tst,small,507x507-pad,600x600,f8f8f8.jpg"
-          alt="Technoblade smiling in one of his videos"
-        />
-        <figcaption id="img-caption">
-          Technoblade Never Dies — his humor, courage, and legacy live on in the
-          hearts of millions.
-        </figcaption>
-      </figure>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dad Tribute</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" href="https://static.thenounproject.com/png/15684-200.png">
+</head>
 
-      <div id="tribute-info">
-        <p>
-          Technoblade, known for his incredible Minecraft skills and legendary
-          humor, inspired millions across the world. His dedication, creativity,
-          and kindness turned him into one of the most beloved figures in the
-          gaming community.
-        </p>
+<body>
+  <main id="main">
+    <h1 id="title">Dad Tribute</h1>
 
-        <h3>Here’s a timeline of Technoblade’s life and achievements:</h3>
+    <figure id="img-div">
+      <img id="image" src="https://i.ibb.co/bg2V6rSK/dad.jpg" alt="My dad" />
+      <figcaption id="img-caption">
+        Mike Legaspi — An entrepreneur, drummer, and loving father.
+      </figcaption>
+    </figure>
 
-        <ul>
-          <li><strong>1999</strong> – Born in California, USA</li>
-          <li>
-            <strong>2013</strong> – Creates his YouTube channel
-            <em>“Technoblade”</em>
-          </li>
-          <li>
-            <strong>2015</strong> – Gains popularity for his Hypixel SkyWars and
-            Blitz Survival Games videos
-          </li>
-          <li>
-            <strong>2019</strong> – Wins multiple Minecraft Monday tournaments,
-            becoming a community legend
-          </li>
-          <li>
-            <strong>2020</strong> – Joins the Minecraft Championships (MCC),
-            showing unmatched skill and teamwork
-          </li>
-          <li>
-            <strong>2021</strong> – Reveals his battle with cancer, facing it
-            with incredible bravery and humor
-          </li>
-          <li>
-            <strong>2022</strong> – Passes away at the age of 23; his final
-            message, “So long nerds,” becomes immortal
-          </li>
-        </ul>
+    <div id="tribute-info">
+      <p>My dad is the best role model I could ever have. Through his hard work and dedication, he has provided me and
+        our family with a comfortable life—something I will always appreciate. If not for him, I wouldn’t be the person
+        I am today. This tribute is for my amazing dad, Mike Legaspi.</p>
+
+      <br>
+
+      <h3>Here is a timeline of my dad's life and achievements:</h3>
+
+      <ul>
+        <li><strong>1982</strong> – Born in Bocaue, Bulacan</li>
+        <li>
+          <strong>2004</strong> – Graduated college with a Bachelor's Degree in Political Science in <em><a class="list-link"
+              rel="noopener noreferrer" target="_blank" href="https://www.adamson.edu.ph/2018/">Adamson
+              University</a></em>
+        </li>
+        <li>
+          <strong>2005</strong> – Marries Shella Nebre
+        </li>
+        <li>
+          <strong>2011</strong> – Goes abroad and starts working at <em><a class="list-link" rel="noopener noreferrer" target="_blank"
+              href="https://madeinuaegate.ae/factories/sichem-llc/">Sichem</a></em>
+        </li>
+        <li>
+          <strong>2012</strong> – Starts being a drummer for the <em><a class="list-link" rel="noopener noreferrer" target="_blank"
+              href="https://www.fccauh.org/">Filipino Christian Church</a></em>
+        </li>
+        <li>
+          <strong>2016</strong> – Gets promoted as the manager of <em><a class="list-link" rel="noopener noreferrer" target="_blank"
+              href="https://madeinuaegate.ae/factories/sichem-llc/">Sichem's</a></em> Logistics Department
+        </li>
+        <li>
+          <strong>2021</strong> – Goes back to the Philippines to start his own business <em><a class="list-link"
+              rel="noopener noreferrer" target="_blank" href="https://kairu-san.github.io/Landing-Page/">Sabon
+              Fabrika</a></em>
+        </li>
 
         <blockquote>
-          “Technoblade never dies.”
+          “All for the glory of God.”
         </blockquote>
-      </div>
+    </div>
 
-      <a
-        id="tribute-link"
-        target="_blank"
-        href="https://dreamteam.fandom.com/wiki/Technoblade"
-      >
-        Read more about Technoblade on his Wikipedia page
-      </a>
-    </main>
-  </body>
+    <a id="tribute-link" target="_blank" href="https://www.facebook.com/mike.c.legaspi">
+      Know more about Mike Legaspi on his Facebook page
+    </a>
+  </main>
+</body>
+
 </html>
