Make minor adjustments

--- a/2.5TributePage/index.html
+++ b/2.5TributePage/index.html
@@ -14,7 +14,7 @@
     <h1 id="title">Dad Tribute</h1>
 
     <figure id="img-div">
-      <img id="image" src="https://i.ibb.co/bg2V6rSK/dad.jpg" alt="My dad" />
+      <img id="image" src="https://scontent.fcrk2-4.fna.fbcdn.net/v/t39.30808-6/468030161_10160687697217444_2538727298495396059_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=86c6b0&_nc_eui2=AeEq7Fat6YXZ8pvPQtAdcHlkz8OE-sTnv5rPw4T6xOe_mvCgBaIlq5wtBF1Wqo9DBFF0x53XYgKPkIwosfuWPmR8&_nc_ohc=UQlaYu8UTmQQ7kNvwG9b5TE&_nc_oc=Admsb57pZn_BkJwbONA2HyDDHhiji7rldJegspdAnpanWkwa56EfYaUlzovw1pC6zA4&_nc_zt=23&_nc_ht=scontent.fcrk2-4.fna&_nc_gid=bj7UJRow7WScyw67-BSH-w&oh=00_AfhE6x2ZrlIjZkmEubAMoqhPPnr5Tl7UI356DS0ckWRS-g&oe=69111607" alt="My dad" />
       <figcaption id="img-caption">
         Mike Legaspi — An entrepreneur, drummer, and loving father.
       </figcaption>
@@ -22,7 +22,7 @@
 
     <div id="tribute-info">
       <p>My dad is the best role model I could ever have. Through his hard work and dedication, he has provided me and
-        our family with a comfortable life—something I will always appreciate. If not for him, I wouldn’t be the person
+        our family with a comfortable life, something I will always appreciate. If not for him, I wouldn’t be the person
         I am today. This tribute is for my amazing dad, Mike Legaspi.</p>
 
       <br>
@@ -37,7 +37,8 @@
               University</a></em>
         </li>
         <li>
-          <strong>2005</strong> – Marries Shella Nebre
+          <strong>2005</strong> – Marries <em><a class="list-link"
+              rel="noopener noreferrer" target="_blank" href="https://scontent.fcrk4-1.fna.fbcdn.net/v/t39.30808-6/490816218_9747552135283757_7109630391369975223_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEib9R5JE1uIILwScd7B4139RZ4MJkR6m31FngwmRHqbTQGHipPnFSsxTfa3w2YNTYuhqugCHyuEuuffQIcilW3&_nc_ohc=Fi7G7sMHF9cQ7kNvwF6V79O&_nc_oc=Admra9HbBu4TZPfL5FMv8YQGQ6eY-imR_SZJyVbHGofOPkYAdetS_3Iw_0O62uYhIOo&_nc_zt=23&_nc_ht=scontent.fcrk4-1.fna&_nc_gid=MTgE4pN_uUd8G0sx9pRNaA&oh=00_AfirHdzWPA8c8MeNdvNg9t1AIrD3I4ctXL4RJwzL0T02uQ&oe=69111322">Shella Legaspi</a></em>
         </li>
         <li>
           <strong>2011</strong> – Goes abroad and starts working at <em><a class="list-link" rel="noopener noreferrer" target="_blank"
@@ -56,7 +57,7 @@
               rel="noopener noreferrer" target="_blank" href="https://kairu-san.github.io/Landing-Page/">Sabon
               Fabrika</a></em>
         </li>
-
+        <br>
         <blockquote>
           “All for the glory of God.”
         </blockquote>
