Remake 3.4 Technical Document

--- a/3.4TechnicalDocumentationPage/index.html
+++ b/3.4TechnicalDocumentationPage/index.html
@@ -1,70 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>VS Code Basic Shortcuts</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <main id="main-doc">
-        <nav id="navbar">
-            <header>YOOOOOOOOOOOO</header>
-            <a class="nav-link" href="#YoYo1">YoYo1</a>
-            <a class="nav-link" href="#YoYo2">YoYo2</a>
-            <a class="nav-link" href="#YoYo3">YoYo3</a>
-            <a class="nav-link" href="#YoYo4">YoYo4</a>
-            <a class="nav-link" href="#YoYo5">YoYo5</a>
-        </nav>
+  <main id="main-doc">
+    <nav id="navbar">
+      <header>VS Code Shortcuts</header>
+      <a class="nav-link" href="#Opening_and_Saving">Opening and Saving</a>
+      <a class="nav-link" href="#Editing">Editing</a>
+      <a class="nav-link" href="#Navigation">Navigation</a>
+      <a class="nav-link" href="#Emmet_Abbreviations">Emmet Abbreviations</a>
+      <a class="nav-link" href="#Terminal">Terminal</a>
+    </nav>
 
-        <section id="YoYo1" class="main-section">
-            <header id="yoyo1">YoYo1</header>
-            <p>Yoyo</p>
-            <p>yOyO</p>
-            <code>Hello World</code>
-            <ul>
-                <li>Yo</li>
-            </ul>
-        </section>
-        <section id="YoYo2" class="main-section">
-            <header id="yoyo2">YoYo2</header>
-            <p>Yoyo</p>
-            <p>yOyO</p>
-            <code>Hello World</code>
-            <ul>
-                <li>Yo</li>
-            </ul>
-        </section>
-        <section id="YoYo3" class="main-section">
-            <header id="yoyo3">YoYo3</header>
-            <p>Yoyo</p>
-            <p>yOyO</p>
-            <code>Hello World</code>
-            <ul>
-                <li>Yo</li>
-            </ul>
-        </section>
-        <section id="YoYo4" class="main-section">
-            <header id="yoyo4">YoYo4</header>
-            <p>Yoyo</p>
-            <p>yOyO</p>
-            <code>Hello World</code>
-            <ul>
-                <li>Yo</li>
-            </ul>
-        </section>
-        <section id="YoYo5" class="main-section">
-            <header id="yoyo5">YoYo5</header>
-            <p>Yoyo</p>
-            <p>yOyO</p>
-            <code>Hello World</code>
-            <ul>
-                <li>Yo</li>
-            </ul>
-        </section>
-    </main>
+    <section id="Opening_and_Saving" class="main-section">
+      <header>Opening and Saving</header>
+      <div class="bg-square">
+        <div class="p-section">
+          <p>These shortcuts help you quickly open, create, and save files in VS Code.</p>
+          <p>They are essential for working efficiently without the mouse.</p>
+        </div>
+        <ul>
+          <li><code>Ctrl + N</code> — New File</li>
+          <li><code>Ctrl + O</code> — Open File</li>
+          <li><code>Ctrl + S</code> — Save File</li>
+          <li><code>Ctrl + K S</code> — Save All Files</li>
+          <li><code>Ctrl + W</code> — Close File</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="Editing" class="main-section">
+      <header>Editing</header>
+      <div class="bg-square">
+        <div class="p-section">
+          <p>Use these shortcuts to edit text faster and manage your code easily.</p>
+          <p>They help minimize repetitive actions and improve your overall coding speed.</p>
+        </div>
+        <ul>
+          <li><code>Ctrl + X</code> — Cut Line</li>
+          <li><code>Ctrl + C</code> — Copy Line</li>
+          <li><code>Ctrl + V</code> — Paste Line</li>
+          <li><code>Ctrl + Z</code> — Undo</li>
+          <li><code>Ctrl + Y</code> — Redo</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="Navigation" class="main-section">
+      <header>Navigation</header>
+      <div class="bg-square">
+        <div class="p-section">
+          <p>Navigation shortcuts let you move through files and tabs easily.</p>
+          <p>They reduce the need for mouse interaction, keeping your hands on the keyboard for better efficiency.</p>
+        </div>
+        <ul>
+          <li><code>Ctrl + Tab</code> — Switch Tabs</li>
+          <li><code>Ctrl + P</code> — Quick Open File</li>
+          <li><code>Ctrl + G</code> — Go to Line</li>
+          <li><code>Ctrl + Home</code> — Go to Start</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="Emmet_Abbreviations" class="main-section">
+      <header>Emmet Abbreviations</header>
+      <div class="bg-square">
+        <div class="p-section">
+          <p>Emmet expands short text into full HTML structures instantly.</p>
+          <p>It’s a powerful way to speed up writing repetitive HTML or CSS code snippets.</p>
+        </div>
+        <ul>
+          <li><code>!</code> — Expands to full HTML boilerplate</li>
+          <li><code>ul&gt;li*3</code> — Creates a list with three items</li>
+          <li><code>div&gt;p</code> — Creates a div with a paragraph inside</li>
+          <li><code>Tab</code> — Expands abbreviation</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="Terminal" class="main-section">
+      <header>Terminal</header>
+      <div class="bg-square">
+        <div class="p-section">
+          <p>The integrated terminal allows you to run commands directly in VS Code.</p>
+          <p>It keeps your development environment unified, saving time switching between external terminals.</p>
+        </div>
+        <ul>
+          <li><code>Ctrl + `</code> — Toggle Terminal</li>
+          <li><code>Ctrl + Shift + `</code> — New Terminal</li>
+          <li><code>Ctrl + L</code> — Clear Terminal</li>
+          <li><code>Ctrl + Shift + W</code> — Close Terminal</li>
+        </ul>
+      </div>
+    </section>
+  </main>
 </body>
-
 </html>
