Add CSS to 1.5 Survey Form

--- a/1.5SurveryForm/index.html
+++ b/1.5SurveryForm/index.html
@@ -80,126 +80,130 @@
 
       <fieldset>
         <legend>Favourite Type/s</legend>
-
-        <label for="normal-type">
-          <input id="normal-type" type="checkbox" name="type" value="Normal" />
-          Normal
-        </label>
-        <br />
-
-        <label for="fire-type">
-          <input id="fire-type" type="checkbox" name="type" value="Fire" />
-          Fire
-        </label>
-        <br />
-
-        <label for="water-type">
-          <input id="water-type" type="checkbox" name="type" value="Water" />
-          Water
-        </label>
-        <br />
-
-        <label for="electric-type">
-          <input
-            id="electric-type"
-            type="checkbox"
-            name="type"
-            value="Electric" />
-          Electric
-        </label>
-        <br />
-
-        <label for="grass-type">
-          <input id="grass-type" type="checkbox" name="type" value="Grass" />
-          Grass
-        </label>
-        <br />
-
-        <label for="ice-type">
-          <input id="ice-type" type="checkbox" name="type" value="Ice" />
-          Ice
-        </label>
-        <br />
-
-        <label for="fighting-type">
-          <input
-            id="fighting-type"
-            type="checkbox"
-            name="type"
-            value="Fighting" />
-          Fighting
-        </label>
-        <br />
-
-        <label for="poison-type">
-          <input id="poison-type" type="checkbox" name="type" value="Poison" />
-          Poison
-        </label>
-        <br />
-
-        <label for="ground-type">
-          <input id="ground-type" type="checkbox" name="type" value="Ground" />
-          Ground
-        </label>
-        <br />
-
-        <label for="flying-type">
-          <input id="flying-type" type="checkbox" name="type" value="Flying" />
-          Flying
-        </label>
-        <br />
-
-        <label for="psychic-type">
-          <input
-            id="psychic-type"
-            type="checkbox"
-            name="type"
-            value="Psychic" />
-          Psychic
-        </label>
-        <br />
-
-        <label for="bug-type">
-          <input id="bug-type" type="checkbox" name="type" value="Bug" />
-          Bug
-        </label>
-        <br />
-
-        <label for="rock-type">
-          <input id="rock-type" type="checkbox" name="type" value="Rock" />
-          Rock
-        </label>
-        <br />
-
-        <label for="ghost-type">
-          <input id="ghost-type" type="checkbox" name="type" value="Ghost" />
-          Ghost
-        </label>
-        <br />
-
-        <label for="dragon-type">
-          <input id="dragon-type" type="checkbox" name="type" value="Dragon" />
-          Dragon
-        </label>
-        <br />
-
-        <label for="dark-type">
-          <input id="dark-type" type="checkbox" name="type" value="Dark" />
-          Dark
-        </label>
-        <br />
-
-        <label for="steel-type">
-          <input id="steel-type" type="checkbox" name="type" value="Steel" />
-          Steel
-        </label>
-        <br />
-
-        <label for="fairy-type">
-          <input id="fairy-type" type="checkbox" name="type" value="Fairy" />
-          Fairy
-        </label>
-        <br />
+        <div class="fave-type">
+          <label for="normal-type">
+            <input
+              id="normal-type"
+              type="checkbox"
+              name="type"
+              value="Normal" />
+            Normal
+          </label>
+          <br />
+          <label for="fire-type">
+            <input id="fire-type" type="checkbox" name="type" value="Fire" />
+            Fire
+          </label>
+          <br />
+          <label for="water-type">
+            <input id="water-type" type="checkbox" name="type" value="Water" />
+            Water
+          </label>
+          <br />
+          <label for="electric-type">
+            <input
+              id="electric-type"
+              type="checkbox"
+              name="type"
+              value="Electric" />
+            Electric
+          </label>
+          <br />
+          <label for="grass-type">
+            <input id="grass-type" type="checkbox" name="type" value="Grass" />
+            Grass
+          </label>
+          <br />
+          <label for="ice-type">
+            <input id="ice-type" type="checkbox" name="type" value="Ice" />
+            Ice
+          </label>
+          <br />
+          <label for="fighting-type">
+            <input
+              id="fighting-type"
+              type="checkbox"
+              name="type"
+              value="Fighting" />
+            Fighting
+          </label>
+          <br />
+          <label for="poison-type">
+            <input
+              id="poison-type"
+              type="checkbox"
+              name="type"
+              value="Poison" />
+            Poison
+          </label>
+          <br />
+          <label for="ground-type">
+            <input
+              id="ground-type"
+              type="checkbox"
+              name="type"
+              value="Ground" />
+            Ground
+          </label>
+          <br />
+          <label for="flying-type">
+            <input
+              id="flying-type"
+              type="checkbox"
+              name="type"
+              value="Flying" />
+            Flying
+          </label>
+          <br />
+          <label for="psychic-type">
+            <input
+              id="psychic-type"
+              type="checkbox"
+              name="type"
+              value="Psychic" />
+            Psychic
+          </label>
+          <br />
+          <label for="bug-type">
+            <input id="bug-type" type="checkbox" name="type" value="Bug" />
+            Bug
+          </label>
+          <br />
+          <label for="rock-type">
+            <input id="rock-type" type="checkbox" name="type" value="Rock" />
+            Rock
+          </label>
+          <br />
+          <label for="ghost-type">
+            <input id="ghost-type" type="checkbox" name="type" value="Ghost" />
+            Ghost
+          </label>
+          <br />
+          <label for="dragon-type">
+            <input
+              id="dragon-type"
+              type="checkbox"
+              name="type"
+              value="Dragon" />
+            Dragon
+          </label>
+          <br />
+          <label for="dark-type">
+            <input id="dark-type" type="checkbox" name="type" value="Dark" />
+            Dark
+          </label>
+          <br />
+          <label for="steel-type">
+            <input id="steel-type" type="checkbox" name="type" value="Steel" />
+            Steel
+          </label>
+          <br />
+          <label for="fairy-type">
+            <input id="fairy-type" type="checkbox" name="type" value="Fairy" />
+            Fairy
+          </label>
+          <br />
+        </div>
       </fieldset>
 
       <fieldset>
