Add favicons to 1.5 Survey Form and 3.4 Technical Document

--- a/3.4TechnicalDocumentationPage/index.html
+++ b/3.4TechnicalDocumentationPage/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VS Code Basic Shortcuts</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Visual_Studio_Code_1.35_icon.svg/768px-Visual_Studio_Code_1.35_icon.svg.png?20210804221519">
 </head>
 
 <body>
