--- a/2.5TributePage/index.html
+++ b/2.5TributePage/index.html
@@ -14,7 +14,7 @@
     <h1 id="title">Dad Tribute</h1>
 
     <figure id="img-div">
-      <img id="image" src="https://scontent.fcrk2-4.fna.fbcdn.net/v/t39.30808-6/468030161_10160687697217444_2538727298495396059_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=86c6b0&_nc_eui2=AeEq7Fat6YXZ8pvPQtAdcHlkz8OE-sTnv5rPw4T6xOe_mvCgBaIlq5wtBF1Wqo9DBFF0x53XYgKPkIwosfuWPmR8&_nc_ohc=UQlaYu8UTmQQ7kNvwG9b5TE&_nc_oc=Admsb57pZn_BkJwbONA2HyDDHhiji7rldJegspdAnpanWkwa56EfYaUlzovw1pC6zA4&_nc_zt=23&_nc_ht=scontent.fcrk2-4.fna&_nc_gid=bj7UJRow7WScyw67-BSH-w&oh=00_AfhE6x2ZrlIjZkmEubAMoqhPPnr5Tl7UI356DS0ckWRS-g&oe=69111607" alt="My dad" />
+      <img id="image" src="dad.jpg" alt="My dad" />
       <figcaption id="img-caption">
         Mike Legaspi — An entrepreneur, drummer, and loving father.
       </figcaption>
