--- a/4.3ProductLandingPage/index.html
+++ b/4.3ProductLandingPage/index.html
@@ -1,130 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bangers&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/png" href="./images/logo.png" />
-    <title>Sabon Fabrika</title>
-  </head>
 
-  <body>
-    <header id="header">
-      <nav id="nav-bar">
-        <img
-          id="header-img"
-          width="100px"
-          height="100px"
-          src="./images/transparent_logo.png"
-          alt="sabon fabrika logo" />
-        <div id="link-container">
-          <a class="nav-link" href="#Home">Home</a>
-          <a class="nav-link" href="#About_Us">About Us</a>
-          <a class="nav-link" href="#Products">Products</a>
-          <a class="nav-link" href="#Customers">Customers</a>
-          <a class="nav-link" href="#Contact">Contact</a>
-        </div>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bangers&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="script" href="script.js">
+  <link rel="icon" type="image/png" href="./images/logo.png" />
+  <title>Sabon Fabrika</title>
+</head>
 
-    <section id="Home" class="main-section">
-      <img
-        id="hero-image"
-        src="./images/hero.png"
-        alt="All sabon fabrika products"
-        width="1000" />
-      <div id="hero-text">
-        <h1 id="hero-title">SABON FABRIKA</h1>
-        <h4 id="hero-subtitle">Best Sabon in Town</h4>
+<body>
+  <header id="header">
+    <nav id="nav-bar">
+      <img id="header-img" width="100px" height="100px" src="./images/transparent_logo.png" alt="sabon fabrika logo" />
+      <div id="link-container">
+        <a class="nav-link" href="#Home">Home</a>
+        <a class="nav-link" href="#About_Us">About Us</a>
+        <a class="nav-link" href="#Products">Products</a>
+        <a class="nav-link" href="#Customers">Customers</a>
+        <a class="nav-link" href="#Contact">Contact</a>
       </div>
-    </section>
+    </nav>
+  </header>
 
-    <section id="About_Us" class="main-section">
+  <section id="Home" class="main-section">
+    <img id="hero-image" src="./images/hero.png" alt="All sabon fabrika products" width="1000" />
+    <div id="hero-text">
+      <h1 id="hero-title">SABON FABRIKA</h1>
+      <h4 id="hero-subtitle">Best Sabon in Town</h4>
+    </div>
+  </section>
+
+  <section id="About_Us" class="main-section">
+    <h2 class="header-text">WANT HIGH QUALITY?</h2>
+    <div id="about-container">
+      <div id="about-text">
+        <p>
+          Sabon Fabrika offers reliable and effective cleaning solutions designed
+          to meet your everyday needs. With a focus on quality and consistency, we
+          deliver products you can trust.
+        </p>
+        <p>
+          Enjoy wholesale discounted prices, affordable refilling station
+          packages, and free delivery on bulk orders—making quality cleaning more
+          accessible and convenient for you.
+        </p>
+      </div>
       <video id="video" width="300" controls>
         <source src="./images/sabon_ad.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
-      <h2 class="header-text">WANT HIGH QUALITY?</h2>
-      <p>
-        Sabon Fabrika offers reliable and effective cleaning solutions designed
-        to meet your everyday needs. With a focus on quality and consistency, we
-        deliver products you can trust.
-      </p>
-      <p>
-        Enjoy wholesale discounted prices, affordable refilling station
-        packages, and free delivery on bulk orders—making quality cleaning more
-        accessible and convenient for you.
-      </p>
-    </section>
+    </div>
+  </section>
 
-    <section id="Products" class="main-section">
-      <h2 class="header-text">OUR PRODUCTS</h2>
-      <div class="product-grid">
-        <div class="product-item">
-          <img src="./images/product1.jpg" alt="Product 1" />
-          <h3>Dishwashing Soap</h3>
-        </div>
-        <div class="product-item">
-          <img src="./images/product2.jpg" alt="Product 2" />
-          <h3>Hand Soap</h3>
-        </div>
-        <div class="product-item">
-          <img src="./images/product3.jpg" alt="Product 3" />
-          <h3>Fabcon</h3>
-        </div>
-        <div class="product-item">
-          <img src="./images/product4.jpg" alt="Product 4" />
-          <h3>Laundry Detergent</h3>
-        </div>
-        <div class="product-item">
-          <img src="./images/product5.jpg" alt="Product 5" />
-          <h3>Laundry Powder</h3>
-        </div>
-        <div class="product-item">
-          <img src="./images/product6.jpg" alt="Product 6" />
-          <h3>Liquid Bleach</h3>
-        </div>
+  <section id="Products" class="main-section">
+    <h2 class="header-text">OUR PRODUCTS</h2>
+    <div class="product-grid">
+      <div class="product-item">
+        <img src="./images/product1.jpg" alt="Product 1" />
+        <h3>Dishwashing Soap</h3>
       </div>
-    </section>
-
-    <section id="Customers" class="main-section">
-      <h2 class="header-text">BRANCHES ACROSS THE PHILIPPINES</h2>
-      <div class="gallery-grid">
-        <div class="gallery-item">
-          <img src="./images/customer1.jpg" alt="Customer 1" />
-          <h3>San Carlos, Dagupan</h3>
-        </div>
-        <div class="gallery-item">
-          <img src="./images/customer1.jpg" alt="Customer 1" />
-          <h3>San Carlos, Dagupan</h3>
-        </div>
-        <div class="gallery-item">
-          <img src="./images/customer1.jpg" alt="Customer 1" />
-          <h3>San Carlos, Dagupan</h3>
-        </div>
-        <div class="gallery-item">
-          <img src="./images/customer1.jpg" alt="Customer 1" />
-          <h3>San Carlos, Dagupan</h3>
-        </div>
+      <div class="product-item">
+        <img src="./images/product2.jpg" alt="Product 2" />
+        <h3>Hand Soap</h3>
       </div>
-    </section>
+      <div class="product-item">
+        <img src="./images/product3.jpg" alt="Product 3" />
+        <h3>Fabcon</h3>
+      </div>
+      <div class="product-item">
+        <img src="./images/product4.jpg" alt="Product 4" />
+        <h3>Laundry Detergent</h3>
+      </div>
+      <div class="product-item">
+        <img src="./images/product5.jpg" alt="Product 5" />
+        <h3>Laundry Powder</h3>
+      </div>
+      <div class="product-item">
+        <img src="./images/product6.jpg" alt="Product 6" />
+        <h3>Liquid Bleach</h3>
+      </div>
+    </div>
+  </section>
 
-    <section id="Contact" class="main-section">
-      <form id="form" action="https://www.freecodecamp.com/email-submit">
-        <label for="email">Sign up for our latest deals!</label>
-        <input
-          placeholder="johndoe@example.com"
-          type="email"
-          name="email"
-          id="email"
-          required />
-        <input type="submit" id="submit" />
-      </form>
-    </section>
-  </body>
+  <section id="Customers" class="main-section">
+    <h2 class="header-text">BRANCHES ACROSS THE PHILIPPINES</h2>
+    <div class="gallery-grid">
+      <div class="gallery-item">
+        <img src="./images/customer1.jpg" alt="Customer 1" />
+        <h3>San Carlos, Dagupan</h3>
+      </div>
+      <div class="gallery-item">
+        <img src="./images/customer1.jpg" alt="Customer 1" />
+        <h3>San Carlos, Dagupan</h3>
+      </div>
+      <div class="gallery-item">
+        <img src="./images/customer1.jpg" alt="Customer 1" />
+        <h3>San Carlos, Dagupan</h3>
+      </div>
+      <div class="gallery-item">
+        <img src="./images/customer1.jpg" alt="Customer 1" />
+        <h3>San Carlos, Dagupan</h3>
+      </div>
+    </div>
+  </section>
+
+  <section id="Contact" class="main-section">
+    <form id="form" action="https://www.freecodecamp.com/email-submit">
+      <label for="email">Sign up for our latest deals!</label>
+      <input placeholder="johndoe@example.com" type="email" name="email" id="email" required />
+      <input type="submit" id="submit" />
+    </form>
+  </section>
+</body>
+
 </html>
