Add mobile layout to 4.3 Product Landing Page

--- a/4.3ProductLandingPage/index.html
+++ b/4.3ProductLandingPage/index.html
@@ -63,7 +63,7 @@
     <div class="product-grid">
       <div class="product-item">
         <img src="./images/dishwashing.png" alt="Product 1" id="dishwashing" />
-        <h3>Dishwashing Soap</h3>
+        <h3>Dishwashing Liquid</h3>
       </div>
       <div class="product-item">
         <img src="./images/handsoap.png" alt="Product 2" />
@@ -71,7 +71,7 @@
       </div>
       <div class="product-item">
         <img src="./images/fabcon.png" alt="Product 3" />
-        <h3>Fabcon</h3>
+        <h3>Fabtric Conditioner</h3>
       </div>
       <div class="product-item">
         <img src="./images/laundeter.png" alt="Product 4" />
@@ -92,20 +92,23 @@
   <div class="customer-wrap">
     <h2 class="header-text">BRANCHES ACROSS THE PHILIPPINES</h2>
     <div class="slider">
-      <div class="slides">
-        <div class="card"><img src="./images/customers/bauang-launion.jpg"><p>Bauang, La Union</p></div>
-        <div class="card"><img src="./images/customers/cabanatuancity-neuvaecija.jpg"><p>Cabanatuan City, Nueva Ecija</p></div>
-        <div class="card"><img src="./images/customers/dinalupihan-bataan.jpg"><p>Dinalupihan, Bataan</p></div>
-        <div class="card"><img src="./images/customers/mayantoc-tarlac.jpg"><p>Mayantoc, Tarlac</p></div>
-        <div class="card"><img src="./images/customers/bauang-launion.jpg"><p>Bauang, La Union</p></div>
-        <div class="card"><img src="./images/customers//pozorrubio-pangasinan.jpg"><p>Pozorrubio, Pangasinan</p></div>
-        <div class="card"><img src="./images/customers/sancarloscity-pangasinan.jpg"><p>San Carlos City, Pangasinan</p></div>
-        <div class="card"><img src="./images/customers/sanmanuel-pangasinan.jpg"><p>San Manuel, Pangasinan</p></div>
-        <div class="card"><img src="./images/customers/urbiztondo-pangasinan.jpg"><p>Urbiztondo, Pangasinan</p></div>
+      <button class="prev">&#10094;</button>
+      <div class="slides-container">
+        <div class="slides">
+          <div class="card"><img src="./images/customers/bauang-launion.jpg"><p>Bauang, La Union</p></div>
+          <div class="card"><img src="./images/customers/cabanatuancity-neuvaecija.jpg"><p>Cabanatuan City, Nueva Ecija</p></div>
+          <div class="card"><img src="./images/customers/dinalupihan-bataan.jpg"><p>Dinalupihan, Bataan</p></div>
+          <div class="card"><img src="./images/customers/mayantoc-tarlac.jpg"><p>Mayantoc, Tarlac</p></div>
+          <div class="card"><img src="./images/customers/pozorrubio-pangasinan.jpg"><p>Pozorrubio, Pangasinan</p></div>
+          <div class="card"><img src="./images/customers/sancarloscity-pangasinan.jpg"><p>San Carlos City, Pangasinan</p></div>
+          <div class="card"><img src="./images/customers/sison-pangasinan.jpg"><p>Sison, Pangasinan</p></div>
+        </div>
       </div>
+      <button class="next">&#10095;</button>
     </div>
   </div>
 </section>
+
 
 
   <section id="Contact" class="main-section">
@@ -119,8 +122,9 @@
   </section>
   
   <footer>
-    <p>© Sabon Fabrika 2024 All Rights Reserved.</p>
+    <p>© Sabon Fabrika 2021 All Rights Reserved.</p>
   </footer>
-</body>
 
+  <script src="script.js"></script>
+</body>
 </html>
